# distributed-task-kernel

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/: dtk_kernel.hpp
src/: dtk_kernel.cpp  dtk_task_handler.cpp  main.cpp
tests/: test_dkt_task_handler.cpp
